<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<modules>
		<module>application</module>
		<module>validation</module>
        <module>integrationtest</module>
		<module>testreport</module>
		<module>documentation</module>
		<module>management</module>
		<module>common</module>
	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
	</parent>
	<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
	<artifactId>klausuleret-tilskud-valideringskomponent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>klausuleret-tilskud-valideringskomponent</name>

	<properties>
		<java.version>21</java.version>
		<testcontainers.version>1.21.3</testcontainers.version>
		<jacoco-version>0.8.13</jacoco-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Modules in project -->
			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>validation</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>common</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>management</artifactId>
				<version>${project.version}</version>
			</dependency>


			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>integrationtest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>application</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.klausuleret-tilskud-valideringskomponent</groupId>
				<artifactId>documentation</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>8.1</version>
			</dependency>

			<!-- Jackson Databind nullable -->
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>0.2.7</version>
			</dependency>

			<!-- Swagger annotations -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.37</version>
			</dependency>

			<!-- Test dependencies - test containers -->
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mockserver</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>mariadb</artifactId>
				<version>${testcontainers.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver</artifactId>
				<version>3.12</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mock-server</groupId>
				<artifactId>mockserver-client-java</artifactId>
				<version>5.15.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-mysql</artifactId>
				<version>11.13.1</version>
				<scope>test</scope>
			</dependency>

			<!-- Code coverage -->
			<dependency>
				<groupId>org.jacoco</groupId>
				<artifactId>org.jacoco.agent</artifactId>
				<version>${jacoco-version}</version>
			</dependency>

			<!-- Integration test client dependencies -->
			<dependency>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs</artifactId>
				<version>4.9.6</version>
				<type>pom</type>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>5.1.0</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>1.9.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>1.21.3</version>
				<scope>test</scope>
			</dependency>



		</dependencies>
	</dependencyManagement>



	<build>
		<finalName>${project.artifactId}</finalName>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>io.fabric8</groupId>
					<artifactId>docker-maven-plugin</artifactId>
					<version>0.46.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.9.10</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<offline>true</offline>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco-version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
				<version>2.9.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>makeAggregateBom</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<projectType>library</projectType>
					<schemaVersion>1.4</schemaVersion>
					<includeBomSerialNumber>true</includeBomSerialNumber>
					<includeCompileScope>true</includeCompileScope>
					<includeProvidedScope>true</includeProvidedScope>
					<includeRuntimeScope>true</includeRuntimeScope>
					<includeSystemScope>true</includeSystemScope>
					<includeTestScope>false</includeTestScope>
					<includeLicenseText>false</includeLicenseText>
					<outputReactorProjects>true</outputReactorProjects>
					<outputFormat>all</outputFormat>
					<outputName>service-sbom</outputName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.6.0</version>
			</plugin>
		</plugins>
	</build>
</project>
